--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,7 +27,7 @@
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     
     <!-- CSS -->
-    <link rel="stylesheet" href="styles_new.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- Splash Screen -->
@@ -472,7 +472,7 @@
     <div id="toast-container" class="toast-container"></div>
 
     <!-- JavaScript -->
-    <script src="script_new.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
 
